--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -2,4 +2,5 @@
 @import "./tasktable.css";
 @import "./choose_user.css";
 @import "./app.css";
-/* @import "./root.css"; */
+@import "./jackpot.css";
+@import "./header.css";
