--- a/client/src/css/app.css
+++ b/client/src/css/app.css
@@ -1,7 +1,8 @@
 .app {
   display: flex;
   height: 100vh;
-  width: 350px;
+  max-width: 400px;
+  width: 100vw;
   justify-content: start;
   /* margin: 3%; */
   gap: 1%;
